app/assets/stylesheets/custom.css
/* ... */
.feed-photo img {
    max-height: 180px;
    border-radius: 4px;
    overflow: hidden;
    margin-right: 10px;
    margin-bottom: 10px;
}

a:hover {
  text-decoration: none!important;
}

.agile-list {
    list-style: none;
    margin: 0;
}

.sortable-list {
    padding: 10px 0;
}

.agile-list li.warning-element {
    border-left: 3px solid #f8ac59;
}

.agile-list li {
    background: #FAFAFB;
    /*border: 1px solid #e7eaec;*/
    margin: 0 0 10px 0;
    padding: 10px;
    border-radius: 2px;
}

.agile-detail {
    margin-top: 5px;
    font-size: 12px;
}

.agile-list li.info-element {
    border-left: 3px solid #1c84c6;
}

.agile-list li {
    background: #FAFAFB;
    /*border: 1px solid #e7eaec;*/
    margin: 0 0 10px 0;
    padding: 10px;
    border-radius: 2px;
}

/*.agile-list li:hover {
    cursor: pointer;
    background: #fff;
    border-left: 3px solid #f8ac59;
}*/

.dropdown-menu {
    margin-top: 0;
    width: 300px;
    /*right: 15px;*/
}

.dropdown-messages {
    margin-left: 5px;
    padding: 10px 10px 10px 10px!important;
}
.dropdown-messages, .dropdown-tasks, .dropdown-alerts {
    width: 310px;
    min-width: 0;
}

.open>.dropdown-menu {
    display: block;
}
.dropdown-messages, .dropdown-alerts {
    padding: 10px 10px 10px 10px;
}
.dropdown-menu {
    left: -10px!important;
       border: medium none;
    border-radius: 3px;
    box-shadow: 0 0 3px rgba(86, 96, 117, 0.7);
    display: none;
    float: left;
    font-size: 12px;
    left: 0;
    list-style: none outside none;
    padding: 0;
     position: absolute; 
     text-shadow: none; 
     top: 100%; 
     z-index: 1000; 
}
.dropdown-menu {
    position: absolute;
    /*top: 48px;*/
    left: 0;
    z-index: 1000;
    display: none;
    float: left;
    min-width: 160px;
    padding: 5px 0;
    margin: 2px 0 0;
    font-size: 14px;
    text-align: left;
    list-style: none;
    background-color: #fff;
    -webkit-background-clip: padding-box;
    background-clip: padding-box;
    border: 1px solid #ccc;
    border: 1px solid rgba(0,0,0,.15);
    border-radius: 4px;
    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
    box-shadow: 0 6px 12px rgba(0,0,0,.175);
}

.dropdown-menu {
    right: 15px;
    left: auto;
    width: 310px;
    min-width: 0;
}

.dropdown-menu .divider {
    height: 1px;
    margin: 9px 0;
    overflow: hidden;
    background-color: #e5e5e5;
}

.dropdown-toggle::after {
  display: none!important;
  content: none!important;
}

#nestable2 .ddd-handle {
    color: inherit;
    border: 1px dashed #e7eaec;
    background: #f3f3f4;
    padding: 10px;
}

.ddd-handle {
    display: block;
    margin: 5px 0;
    padding: 5px 10px;
    color: #333;
    text-decoration: none;
    border: 1px solid #e7eaec;
    background: #f5f5f5;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
}

.dd {
    position: relative;
    display: block;
    margin: 0;
    padding: 0;
    list-style: none;
    font-size: 13px;
    line-height: 20px;
}

.dd-item, .dd-empty, .dd-placeholder {
    display: block;
    position: relative;
    margin: 0;
    padding: 0;
    min-height: 20px;
    font-size: 13px;
    line-height: 20px;
}

#nestable2 .dd-item > button {
    font-family: FontAwesome;
    height: 43px;
    width: 33px;
    color: #c1c1c1;
}
.dd-item > button {
    display: block;
    position: relative;
    cursor: pointer;
    float: left;
    width: 25px;
    height: 20px;
    margin: 5px 0;
    padding: 0;
    text-indent: 100%;
    white-space: nowrap;
    overflow: hidden;
    border: 0;
    background: transparent;
    font-size: 12px;
    line-height: 1;
    text-align: center;
    font-weight: bold;
}

#nestable2 span.label {
    margin-right: 10px;
}

.nav .label, .ibox .label {
    font-size: 10px;
}
.ddd-handle span {
    font-weight: bold;
}

.dd-list .dd-list {
    padding-left: 30px;
}

.dd-list {
    display: block;
    position: relative;
    margin: 0;
    padding: 0;
    list-style: none;
}

.dd-item, .dd-empty, .dd-placeholder {
    display: block;
    position: relative;
    margin: 0;
    padding: 0;
    min-height: 20px;
    font-size: 13px;
    line-height: 20px;
}

#nestable2 .dd-item > button[data-action="collapse"]:before {
    content: "\f068";
}

#nestable2 .dd-item > button:before {
    content: "\f067";
}
.dd-item > button[data-action="collapse"]:before {
    content: '-';
}
.dd-item > button:before {
    content: '+';
    display: block;
    position: absolute;
    width: 100%;
    text-align: center;
    text-indent: 0;
}

.label-info, .badge-info {
    background-color: #23c6c8;
    color: #FFFFFF;
}

.ddd-handle:hover {
    background: #f0f0f0;
    /*cursor: pointer;*/
    color: #f8ac59!important;
    font-weight: bold;
}

